# RSEND-Robert-Home-Service-Robot

./: .gitmodules  README.md
src/: README.md
src/robert/: CMakeLists.txt  package.xml
src/robert/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/robert/launch/: amcl.launch  gmapping.launch  mapping3d.launch  myoffice_world.launch  robot_description.launch  rviz_nav.launch
src/robert/maps/: myoffice_map.yaml
src/robert/maps/rtabmmap/rtabmap_map2d/: map_raw.pgm
src/robert/rviz/: robert.rviz  robert_nav.rviz  robert_test_3d.rviz
src/robert/urdf/: robert.gazebo  robert.xacro  robert_d435_properties.urdf.xacro
src/robert_interactions/robert_add_markers/: CMakeLists.txt  package.xml
src/robert_interactions/robert_add_markers/src/: robert_add_markers.cpp
src/robert_interactions/robert_ball_chaser/: CMakeLists.txt  package.xml
src/robert_interactions/robert_ball_chaser/launch/: robert_ball_chaser.launch
src/robert_interactions/robert_ball_chaser/src/: drive_bot.cpp  process_image.cpp
src/robert_interactions/robert_pick_objects/: CMakeLists.txt  package.xml
src/robert_interactions/robert_pick_objects/src/: robert_pick_objects.cpp
src/robert_interactions/robert_rviz_launchers/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/robert_interactions/robert_rviz_launchers/launch/: view_blind_nav.launch  view_navigation.launch  view_navigation_app.launch  view_robot.launch
src/robert_interactions/robert_rviz_launchers/rviz/: navigation.rviz  robot.rviz
src/robert_scripts/: add_marker.sh  ball_chaser.sh  close_all.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
